Description: LibreOffice seems to require an X11 $DISPLAY just to start, even if it actually runs in Wayland native mode Steps to Reproduce: Disable Xwayland in your compositor (or probably just unset $DISPLAY) and launch LO Actual Results: It just silently quits, showing nothing on the console even Expected Results: Should have launched Reproducible: Always User Profile Reset: No OpenGL enabled: Yes Additional Info:
It might be the splashscreen thing, which is still in X, does launching from the command line like... libreoffice --nologo work ?
(In reply to Caolán McNamara from comment #1) > It might be the splashscreen thing, which is still in X, does launching from > the command line like... > > libreoffice --nologo > > work ? I have tested nologo (forgot to mention), it does not help. Though the instant quit probably meant LO was already open, so these results were not right. Actually what's happening when DISPLAY is not set and there's no existing LO session is that two processes are both waiting on a mutex forever (umtx ~= futex): 538: pwrite(5,"<item oor:path="/org.openoffice."...,65541,0x13d5ef) = 65541 (0x10005) 538: pwrite(5,"Position" oor:op="fuse"><value>1"...,55277,0x14d5f4) = 55277 (0xd7ed) 538: close(5) = 0 (0x0) 538: rename("/home/greg/.config/libreoffice/4/user/Uxl7Ia","/home/greg/.config/libreoffice/4/user/registrymodifications.xcu") = 0 (0x0) 538: <thread 101507 exited> 527: _umtx_op(0x800a4b008,UMTX_OP_WAIT_UINT_PRIVATE,0x0,0x18,0x7fffdfffcec8) ERR#60 'Operation timed out' 538: _umtx_op(0x8077a7008,UMTX_OP_WAIT_UINT_PRIVATE,0x0,0x18,0x7fffdfffcec8) ERR#60 'Operation timed out' 527: _umtx_op(0x800a4b008,UMTX_OP_WAIT_UINT_PRIVATE,0x0,0x18,0x7fffdfffcec8) ERR#60 'Operation timed out' 538: _umtx_op(0x8077a7008,UMTX_OP_WAIT_UINT_PRIVATE,0x0,0x18,0x7fffdfffcec8) ERR#60 'Operation timed out' 527: _umtx_op(0x800a4b008,UMTX_OP_WAIT_UINT_PRIVATE,0x0,0x18,0x7fffdfffcec8) ERR#60 'Operation timed out' 538: _umtx_op(0x8077a7008,UMTX_OP_WAIT_UINT_PRIVATE,0x0,0x18,0x7fffdfffcec8) ERR#60 'Operation timed out'
hmm, under Linux and wayland, if I unset DISPLAY I get "Failed to open display" but I get a successful launch, adding --nolog and I get a successful launch without the "Failed to open display" junk
export SAL_DISABLEGL=1 is another possibility, might be some opengl detection bustage
(In reply to Caolán McNamara from comment #4) > export SAL_DISABLEGL=1 > is another possibility, might be some opengl detection bustage nah. That doesn't help (neither does disabling Java, which I tried just in case). I guess I'll have to make a debug build, but does this backtrace suggest anything? frame #5: 0x0000000800843f15 libc++.so.1`std::__1::condition_variable::__do_timed_wait(this=<unavailable>, lk=<unavailable>, tp=<unavailable>) at condition_variable.cpp:74 frame #6: 0x00000008043721e5 libvcllo.so`___lldb_unnamed_symbol6964$$libvcllo.so + 117 frame #7: 0x0000000804371e2e libvcllo.so`SvpSalInstance::DoYield(bool, bool) + 638 frame #8: 0x00000008042d28de libvcllo.so`Application::Execute() + 318
yeah, it means it has gone into headless mode, and is happily waiting for input which will never come, so maybe get_desktop_environment in vcl/unx/generic/desktopdetect/desktopdetector.cxx failure failure you could try some stuff from there e.g. export OOO_FORCE_DESKTOP=gnome-wayland or export SAL_USE_VCLPLUGIN=gtk3
(In reply to Caolán McNamara from comment #6) > yeah, it means it has gone into headless mode, and is happily waiting for > input which will never come, so maybe get_desktop_environment in > vcl/unx/generic/desktopdetect/desktopdetector.cxx failure failure > > you could try some stuff from there > > e.g. > > export OOO_FORCE_DESKTOP=gnome-wayland > > or > > export SAL_USE_VCLPLUGIN=gtk3 Yeah, these do fix the problem, thanks! I guess the detector should choose GTK3 if just WAYLAND_DISPLAY is present…
would https://gerrit.libreoffice.org/#/c/63123/ do the right thing for you ?
(In reply to Caolán McNamara from comment #8) > would https://gerrit.libreoffice.org/#/c/63123/ do the right thing for you ? I'm not going to rebuild LibreOffice right now, but I'm 99.9% sure it would :) Thanks!
Caolán McNamara committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/+/293526165fcd236ba1742de2feec6ea06376e83f%5E%21 tdf#121275 fallback to gtk3 under wayland with unknown desktop It will be available in 6.2.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
lets assume that works then