tdf#121275 fallback to gtk3 under wayland with unknown desktop

Change-Id: Ie63da823faf9067e61ca4870f464d49425bbc907
Reviewed-on: https://gerrit.libreoffice.org/63123
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>